# canary-sidecar

./: .env.allinone  .env.allinonefly  .env.development  .env.fly  .gitignore  Dockerfile  README.md  api-local-start.sh  docker-compose.yml  fly.toml  pyproject.toml  start-all-in-on.sh
canary-fe/: .env.allinone  .env.allinonefly  .env.compose  .env.development  .env.production  Dockerfile  README.md  api-local-start.sh  docker-compose.yml  index.html  package-lock.json  package.json  rest-api.http
canary-fe/compose/api/: Dockerfile
canary-fe/compose/api/data/: interface.json
canary-fe/compose/proxy/conf/: proxy.conf
canary-fe/src/: App.vue  main.js
canary-fe/src/common/: global.js
canary-fe/src/components/: Dashboard.vue  Gate.vue  Popup.vue  Table.vue  TableCallData.vue
canary-fe/src/components/icons/: IconBell.vue  IconCompress.vue  IconDatabase.vue  IconDown.vue  IconFire.vue  IconHourglass.vue  IconMoon.vue  IconPause.vue  IconRedo.vue  IconShare.vue  IconSun.vue  IconTrash.vue  IconUser.vue
canary-fe/src/stores/: dashboard.js
compose/api/data/: interface.json
compose/proxy/conf/: proxy.conf
docker-all-in-on/: Dockerfile  proxy.conf
src/canary_sidecar/: main.py  settings.py
