[project]
name = "canary-sidecar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pysatellite", email = "pysatellite@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = false
