[project]
name = "canary-sidecar"
version = "0.9.2"
description = "Default template for PDM package"
authors = [
    {name = "pysatellite", email = "pysatellite@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
]
